# Haskell-Kata

./: README.md
DigPow.hsproj/: .uuid  README.md
DigPow.hsproj/DigPow/: DigPow.cabal  DigPow.hs  Test.hs  _DigPow.hsplay
FindEven.hsproj/: .uuid  README.md
FindEven.hsproj/FindEven/: FindEven.cabal
FindEven.hsproj/FindEven/Codewars/G964/: FindEven.hs
FindEven.hsproj/FindEven/Codewars/G964/FindEven/: Test.hs
HumanTime.hsproj/: .uuid  README.md
HumanTime.hsproj/HumanTime/: HumanTime.cabal  HumanTime.hs  Test.hs
Scramblies.hsproj/: .uuid  README.md
Scramblies.hsproj/Scramblies/: Scramblies.cabal  Scramblies.hs  Test.hs  _Scramblies.hsplay
TenMinuteWalk.hsproj/: .uuid  README.md
TenMinuteWalk.hsproj/TakeTenMinuteWalk/: TenMinuteWalk.cabal
TenMinuteWalk.hsproj/TakeTenMinuteWalk/Codewars/Kata/: TenMinuteWalk.hs
TenMinuteWalk.hsproj/TakeTenMinuteWalk/Codewars/Kata/TenMinuteWalk/: Test.hs
YourOrderPlease.hsproj/: .uuid  README.md
YourOrderPlease.hsproj/YourOrderPlease/: Test.hs  YourOrderPlease.cabal  YourOrderPlease.hs
