name: FindEven
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable FindEven
    main-is: Codewars/G964/FindEven/Test.hs
    build-depends:
        base -any,
        hspec -any,
        QuickCheck -any
    default-language: Haskell2010
    other-modules:
        Codewars.G964.FindEven

