name: Scramblies
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable Scramblies
    build-depends:
        base -any,
        hspec -any,
        QuickCheck -any,
        containers -any
    default-language: Haskell2010
    other-modules:
        Test
        Scramblies

